# thermo-sim

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: exploratory_analysis.ipynb
simulations/heat_transfer/: README.md  __main__.py  conduction.py  convection.py  steady_state.py  transient.py  validate.py  visualize.py
simulations/nozzle_flow/: README.md  __main__.py  nozzle.py
simulations/rankine_cycle/: README.md  __main__.py  parametric.py  rankine.py  validate.py  visualize.py
simulations/system_optim/: README.md  model.py  system_optimization.ipynb
tests/: test_fluids.py  test_heat_transfer.py  test_nozzle.py  test_plotting.py  test_rankine.py  test_solvers.py  test_system_optim.py
thermosim/: __init__.py  fluids.py  plotting.py  solvers.py  utils.py
